# yars

./: .gitignore  Cargo.toml  Makefile
db_files/: 0_create_database.sql  1_create_post_body_table.sql  2_create_posts_table.sql  yars_CreatePost.sql  yars_DeletePost.sql  yars_GetPostBody.sql  yars_GetPosts.sql  yars_UpdatePost.sql
src/: api_handler.rs  errors.rs  jwt_handler.rs  main.rs  utilities.rs  web_handler.rs
