[package]
name = "yars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ['full'] }
warp = "0.3.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
color-eyre = "0.6"
log = { version = "0.4", features = ["value-bag"] }
clap = { version = "3.1", features = ["derive"] }
mysql = "22.2.0"
reqwest = { version = "0.11" }
reqwest-middleware = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
jsonwebtoken = "=7.2"
thiserror = "1.0"